front-end component

--- a/force-app/main/default/classes/ExchangeRateApp/ExchangeRateTradeNewRecordController.cls
+++ b/force-app/main/default/classes/ExchangeRateApp/ExchangeRateTradeNewRecordController.cls
@@ -1,7 +1,6 @@
 public with sharing class ExchangeRateTradeNewRecordController {
-
     @AuraEnabled(cacheable=true)
-    public static AvailableCurrencies getAvailableCurrencies(){
+    public static AvailableCurrencies getAvailableCurrencies() {
         try {
             AvailableCurrencies ac = new AvailableCurrencies();
             ac.sellCurrencies.addAll(getPicklistLabels(Trade__c.Sell_Currency__c));
@@ -13,13 +12,33 @@ public with sharing class ExchangeRateTradeNewRecordController {
     }
 
     @AuraEnabled
-    public static Map<String, Map<String, Decimal>> getExchangeRates(String currencies){
+    public static Map<String, Map<String, Decimal>> getExchangeRates(String currencies) {
         try {
             ExchangeRatesParams erp = (ExchangeRatesParams) JSON.deserialize(currencies, ExchangeRatesParams.class);
             Set<String> buyCurrencies = new Set<String>();
             buyCurrencies.addAll(erp.buyCurrencies);
-            Map<String, Set<String>> currenciesMap = new Map<String, Set<String>> {erp.sellCurrency => buyCurrencies};
+            Map<String, Set<String>> currenciesMap = new Map<String, Set<String>>{ erp.sellCurrency => buyCurrencies };
             return ExchangeRateService.getInstance().getExchangeRates(currenciesMap);
+        } catch (Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
+
+    @AuraEnabled
+    public static Trade__c insertTrade(String currencies) {
+        try {
+            System.debug(LoggingLevel.DEBUG, '(currencies): ' + currencies);
+            Trade t = (Trade) JSON.deserialize(currencies, Trade.class);
+            System.debug(LoggingLevel.DEBUG, '(t): ' + JSON.SerializePretty(t));
+            Trade__c newTradeRecord = new Trade__c(
+                Buy_Amount__c = t.sellAmount * t.Rate,
+                Buy_Currency__c = t.buyCurrency,
+                Rate__c = t.rate,
+                Sell_Amount__c = t.sellAmount,
+                Sell_Currency__c = t.sellCurrency
+            );
+            insert newTradeRecord;
+            return newTradeRecord;
         } catch (Exception e) {
             throw new AuraHandledException(e.getMessage());
         }
@@ -28,13 +47,14 @@ public with sharing class ExchangeRateTradeNewRecordController {
     private static List<String> getPicklistLabels(Schema.SObjectField field) {
         List<String> labelsToReturn = new List<String>();
         Schema.DescribeFieldResult dfr = field.getDescribe();
-            Schema.sObjectField T = dfr.getSObjectField();
-            List<PicklistEntry> entries = T.getDescribe().getPicklistValues();
-            for(PicklistEntry pe : entries) {
-                labelsToReturn.add(pe.getLabel());
-            }
-            return labelsToReturn;
+        Schema.sObjectField T = dfr.getSObjectField();
+        List<PicklistEntry> entries = T.getDescribe().getPicklistValues();
+        for (PicklistEntry pe : entries) {
+            labelsToReturn.add(pe.getLabel());
+        }
+        return labelsToReturn;
     }
+
 
     public class AvailableCurrencies {
         @AuraEnabled
@@ -53,6 +73,18 @@ public with sharing class ExchangeRateTradeNewRecordController {
         public String sellCurrency;
         @AuraEnabled
         public List<String> buyCurrencies;
+    }
 
+    public class Trade {
+        @AuraEnabled
+        public Double buyAmount;
+        @AuraEnabled
+        public String buyCurrency;
+        @AuraEnabled
+        public Double rate;
+        @AuraEnabled
+        public Double sellAmount;
+        @AuraEnabled
+        public String sellCurrency;
     }
 }
